Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-94395

qdoc: Incorrect signature generated for QML signals

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.2.0 Alpha
    • 6.2
    • Build tools: qdoc
    • None
    • 8d29e7c656c430a17a30ef9e20d543bf86b9520d (qt/qttools/dev) 41da03fe7e01919fa462b7ed55552b7414ff2526 (qt/qttools/6.2)
    • Da Vinci sprint 36

      /*!
      Signal that takes parameter \a bar.
      */
      signal foo(var bar)

      generates a signature

      foo(var = bar)

        For Gerrit Dashboard: QTBUG-94395
        # Subject Branch Project Status CR V

            treinio Topi Reiniö
            treinio Topi Reiniö
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes