qdoc: Fix incorrect parameters generated for QML signals

If no \qmlsignal command was used, but a signal declaration in a QML
file was preceded by its documentation comment, the signal parameters
were malformed.

Fixes: QTBUG-94395
Change-Id: Ie2f084009b4fb3f27602f170fab49601c19ab987
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
(cherry picked from commit 8d29e7c656c430a17a30ef9e20d543bf86b9520d)
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>